# airflow-dbt-example

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
data-source/: README.md
dbt/: .user.yml  profiles.yml
dbt/football/: README.md  dbt_project.yml
docker/: dockerfile  profiles.yml  test_dbt.py
docker-compose/: docker-compose.yml
